src/main/java/de/weinzierlstefan/expressionparser/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package de.weinzierlstefan.expressionparser.parser;

import java.util.*;

public class Parser implements ParserConstants {
  public void dummy() {}

  final public Operation parse() throws ParseException {
        Operation a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WITH:
    case NOT:
    case INTEGER_LITERAL:
    case HEX_LITERAL:
    case REAL_LITERAL:
    case SIMPLE_STRING_LITERAL:
    case DOUBLE_STRING_LITERAL:
    case BINARY_LITERAL:
    case SIMPLE_ID:
    case COMPLEX_ID:
    case LPAREN:
    case LBRACKET:
    case PLUS:
    case MINUS:
    case BIT_NOT:
    case EXCLMATION_MARK:
      a = expression();
      jj_consume_token(0);
                                          {if (true) return a;}
      break;
    case 0:
      jj_consume_token(0);
                                                                  {if (true) return null;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Operation expression() throws ParseException {
        Operation a;
    a = conditionalExpression();
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation conditionalExpression() throws ParseException {
        Operation a;
        Operation b;
        Operation c;
    a = bitopExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QMARK:
      jj_consume_token(QMARK);
      b = expression();
      jj_consume_token(COLON);
      c = expression();
                                                                a=new Operation(Operation.TERNARY, a, b, c);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation bitopExpression() throws ParseException {
        Operation a = null;
        Operation b;
    a = compareExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BIT_OR:
    case BIT_AND:
    case BIT_XOR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BIT_AND:
        jj_consume_token(BIT_AND);
        b = bitopExpression();
                                                  a=new Operation(Operation.BIT_AND, a, b);
        break;
      case BIT_OR:
        jj_consume_token(BIT_OR);
        b = bitopExpression();
                                                  a=new Operation(Operation.BIT_OR, a, b);
        break;
      case BIT_XOR:
        jj_consume_token(BIT_XOR);
        b = bitopExpression();
                                                  a=new Operation(Operation.BIT_XOR, a, b);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation compareExpression() throws ParseException {
        Operation a = null;
        Operation b;
    a = boolExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CMP_GT:
    case CMP_LT:
    case CMP_LE:
    case CMP_GE:
    case CMP_NE:
    case CMP_EQ:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CMP_EQ:
        jj_consume_token(CMP_EQ);
        b = compareExpression();
                                                                  a=new Operation(Operation.CMP_EQ, a, b);
        break;
      case CMP_NE:
        jj_consume_token(CMP_NE);
        b = compareExpression();
                                                          a=new Operation(Operation.CMP_NE, a, b);
        break;
      case CMP_LT:
        jj_consume_token(CMP_LT);
        b = compareExpression();
                                                                  a=new Operation(Operation.CMP_LT, a, b);
        break;
      case CMP_LE:
        jj_consume_token(CMP_LE);
        b = compareExpression();
                                                          a=new Operation(Operation.CMP_LE, a, b);
        break;
      case CMP_GT:
        jj_consume_token(CMP_GT);
        b = compareExpression();
                                                                  a=new Operation(Operation.CMP_GT, a, b);
        break;
      case CMP_GE:
        jj_consume_token(CMP_GE);
        b = compareExpression();
                                                          a=new Operation(Operation.CMP_GE, a, b);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation boolExpression() throws ParseException {
        Operation a = null;
        Operation b;
    a = shiftExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
    case OR:
    case XOR:
    case BOOL_OR:
    case BOOL_AND:
    case BOOL_XOR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case BOOL_AND:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL_AND:
          jj_consume_token(BOOL_AND);
          break;
        case AND:
          jj_consume_token(AND);
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        b = boolExpression();
                                                                          a=new Operation(Operation.BOOL_AND, a, b);
        break;
      case OR:
      case BOOL_OR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL_OR:
          jj_consume_token(BOOL_OR);
          break;
        case OR:
          jj_consume_token(OR);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        b = boolExpression();
                                                                          a=new Operation(Operation.BOOL_OR, a, b);
        break;
      case XOR:
      case BOOL_XOR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL_XOR:
          jj_consume_token(BOOL_XOR);
          break;
        case XOR:
          jj_consume_token(XOR);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        b = boolExpression();
                                                                          a=new Operation(Operation.BOOL_XOR, a, b);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation shiftExpression() throws ParseException {
        Operation a = null;
        Operation b;
    a = additiveExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SHIFT_LEFT:
    case SHIFT_RIGHT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SHIFT_LEFT:
        jj_consume_token(SHIFT_LEFT);
        b = shiftExpression();
                                                                  a = new Operation(Operation.SHIFT_LEFT, a, b);
        break;
      case SHIFT_RIGHT:
        jj_consume_token(SHIFT_RIGHT);
        b = shiftExpression();
                                                                  a = new Operation(Operation.SHIFT_RIGHT, a, b);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation additiveExpression() throws ParseException {
        Operation a;
        Operation b;
    a = multiplicativeExpression();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        b = multiplicativeExpression();
                                                                  a = new Operation(Operation.ADD, a, b);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        b = multiplicativeExpression();
                                                                  a = new Operation(Operation.SUB, a, b);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation multiplicativeExpression() throws ParseException {
        Operation a;
        Operation b;
    a = unaryExpression1();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 55:
      case 56:
      case 57:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 55:
        jj_consume_token(55);
        b = unaryExpression1();
                                                      a = new Operation(Operation.MUL, a, b);
        break;
      case 56:
        jj_consume_token(56);
        b = unaryExpression1();
                                                      a = new Operation(Operation.DIV, a, b);
        break;
      case 57:
        jj_consume_token(57);
        b = unaryExpression1();
                                                          a = new Operation(Operation.MOD, a, b);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Operation unaryExpression1() throws ParseException {
    Operation a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      a = unaryExpression1();
                                               {if (true) return new Operation(Operation.NEGATE, a);}
      break;
    case PLUS:
      jj_consume_token(PLUS);
      a = unaryExpression1();
                                               {if (true) return a;}
      break;
    case WITH:
    case NOT:
    case INTEGER_LITERAL:
    case HEX_LITERAL:
    case REAL_LITERAL:
    case SIMPLE_STRING_LITERAL:
    case DOUBLE_STRING_LITERAL:
    case BINARY_LITERAL:
    case SIMPLE_ID:
    case COMPLEX_ID:
    case LPAREN:
    case LBRACKET:
    case BIT_NOT:
    case EXCLMATION_MARK:
      a = unaryExpression2();
                                               {if (true) return a;}
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Operation unaryExpression2() throws ParseException {
        Operation a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BIT_NOT:
      jj_consume_token(BIT_NOT);
      a = unaryExpression2();
                                                                                  {if (true) return new Operation(Operation.BIT_NOT, a);}
      break;
    case NOT:
    case EXCLMATION_MARK:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        jj_consume_token(NOT);
        break;
      case EXCLMATION_MARK:
        jj_consume_token(EXCLMATION_MARK);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      a = unaryExpression2();
                                                                      {if (true) return new Operation(Operation.BOOL_NOT, a);}
      break;
    case WITH:
    case INTEGER_LITERAL:
    case HEX_LITERAL:
    case REAL_LITERAL:
    case SIMPLE_STRING_LITERAL:
    case DOUBLE_STRING_LITERAL:
    case BINARY_LITERAL:
    case SIMPLE_ID:
    case COMPLEX_ID:
    case LPAREN:
    case LBRACKET:
      a = element();
                                                                                                                                  {if (true) return a;}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Operation complexElement() throws ParseException {
        Operation a;
        Token t;
    if (jj_2_1(3)) {
      a = with();
                                                                                                          {if (true) return a;}
    } else if (jj_2_2(3)) {
      a = function();
                                                                                          {if (true) return a;}
    } else if (jj_2_3(2)) {
      t = jj_consume_token(SIMPLE_ID);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
                                                          {if (true) return new Operation(Operation.FUNCTION_CALL, t.toString());}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SIMPLE_ID:
        t = jj_consume_token(SIMPLE_ID);
                                                                          {if (true) return new Operation(Operation.VARIABLE, t.toString());}
        break;
      case COMPLEX_ID:
        t = jj_consume_token(COMPLEX_ID);
                                                                          {if (true) return new Operation(Operation.VARIABLE_ESC, t.toString());}
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        a = expression();
        jj_consume_token(RPAREN);
                                                                  {if (true) return a;}
        break;
      case LBRACKET:
        a = arrayExpression();
                                                          {if (true) return a;}
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Operation complexElement2() throws ParseException {
  Operation a;
  List<Operation> operationList;
    if (jj_2_4(2)) {
      a = complexElement();
      operationList = suffixExpressionList();
                                                                                       operationList.add(0, a); {if (true) return new Operation(Operation.SUFFIXED, operationList);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WITH:
      case SIMPLE_ID:
      case COMPLEX_ID:
      case LPAREN:
      case LBRACKET:
        a = complexElement();
                                  {if (true) return a;}
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public List<Operation> suffixExpressionList() throws ParseException {
        List<Operation> operationList = new ArrayList<Operation>();
        Operation a;
    label_3:
    while (true) {
      a = suffixExpression();
                                          operationList.add(a);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
      case DOT:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_3;
      }
    }
                  {if (true) return operationList;}
    throw new Error("Missing return statement in function");
  }

  final public Operation suffixExpression() throws ParseException {
        Operation a;
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      a = arrayExpression();
                                          {if (true) return a;}
      break;
    default:
      jj_la1[23] = jj_gen;
      if (jj_2_5(2)) {
        jj_consume_token(DOT);
        t = jj_consume_token(SIMPLE_ID);
                                                  a = new Operation(Operation.SIMPLE_NAME_SUFFIX, t.toString());
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          jj_consume_token(DOT);
          t = jj_consume_token(COMPLEX_ID);
                                 a= new Operation(Operation.COMPLEX_NAME_SUFFIX, t.toString());
          break;
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Operation arrayExpression() throws ParseException {
        List<Operation> operationList = new ArrayList<Operation>();
        Operation a;
    jj_consume_token(LBRACKET);
    a = arrayEntry();
                                                                          operationList.add(a);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      a = arrayEntry();
                                                  operationList.add(a);
    }
    jj_consume_token(RBRACKET);
          {if (true) return new Operation(Operation.ARRAY_LIST, operationList);}
    throw new Error("Missing return statement in function");
  }

  final public Operation arrayEntry() throws ParseException {
        Operation a;
        Operation b=null;
    a = expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ARRAY_KEY:
      jj_consume_token(ARRAY_KEY);
      b = expression();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
          {if (true) return new Operation(Operation.ARRAY_ENTRY, a, b);}
    throw new Error("Missing return statement in function");
  }

  final public Operation element() throws ParseException {
    Token t;
    Operation a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
                                                  {if (true) return new Operation(Operation.INTEGER_LITERAL, t.toString());}
      break;
    case REAL_LITERAL:
      t = jj_consume_token(REAL_LITERAL);
                                                          {if (true) return new Operation(Operation.REAL_LITERAL, t.toString());}
      break;
    case HEX_LITERAL:
      t = jj_consume_token(HEX_LITERAL);
                                                                          {if (true) return new Operation(Operation.HEX_LITERAL, t.toString());}
      break;
    case BINARY_LITERAL:
      t = jj_consume_token(BINARY_LITERAL);
                                                          {if (true) return new Operation(Operation.BINARY_LITERAL, t.toString());}
      break;
    case SIMPLE_STRING_LITERAL:
      t = jj_consume_token(SIMPLE_STRING_LITERAL);
                                          {if (true) return new Operation(Operation.SIMPLE_STRING_LITERAL, t.toString());}
      break;
    case DOUBLE_STRING_LITERAL:
      t = jj_consume_token(DOUBLE_STRING_LITERAL);
                                          {if (true) return new Operation(Operation.DOUBLE_STRING_LITERAL, t.toString());}
      break;
    case WITH:
    case SIMPLE_ID:
    case COMPLEX_ID:
    case LPAREN:
    case LBRACKET:
      a = complexElement();
                                                  {if (true) return a;}
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Operation function() throws ParseException {
        List<Operation> operationList = new ArrayList<Operation>();
        Operation a;
        Token t;
    t = jj_consume_token(SIMPLE_ID);
    jj_consume_token(LPAREN);
    a = expression();
                                                                          operationList.add(a);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      a = expression();
                                                  operationList.add(a);
    }
    jj_consume_token(RPAREN);
          {if (true) return new Operation(Operation.FUNCTION_CALL, t.toString(), operationList);}
    throw new Error("Missing return statement in function");
  }

  final public Operation with() throws ParseException {
        List<Operation> operationList = new ArrayList<Operation>();
        Operation a;
        Token t;
    jj_consume_token(WITH);
    jj_consume_token(LPAREN);
    label_6:
    while (true) {
      if (jj_2_6(6)) {
        ;
      } else {
        break label_6;
      }
      a = expression();
      jj_consume_token(AS);
      t = jj_consume_token(SIMPLE_ID);
      jj_consume_token(COMMA);
                  operationList.add(new Operation(Operation.AS, t.toString(), a));
    }
    a = expression();
    jj_consume_token(RPAREN);
                operationList.add(a);
                {if (true) return new Operation(Operation.WITH, operationList);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }
